force-app/main/default/objects/EYI_DMS__c/EYI_DMS__c.object-meta.xml
<CustomObject>
    <label>DMS</label>
    <nameField>
        <displayFormat>DMS-{0000}</displayFormat>
        <label>DMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>