force-app/main/default/objects/EYI_DMS__c/fields/EYI_DMS_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_DMS_Number__c</fullName>
    <displayFormat>DMS-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>DMS Number</label>
    <type>AutoNumber</type>
</CustomField>