force-app/main/default/objects/EYI_DMS__c/fields/EYI_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>EYI_Document_Link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>