force-app/main/default/objects/EYI_DMS__c/fields/EYI_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Document_Name__c</fullName>
    <label>Document Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Floor_Plan</fullName>
                <label>Floor Plan</label>
            </value>
            <value>
                <fullName>Product_PPT</fullName>
                <label>Product PPT</label>
            </value>
            <value>
                <fullName>Project_Layout</fullName>
            </value>
            <value>
                <fullName>KnwYrApt_Technical</fullName>
            </value>
            <value>
                <fullName>Project_Logo</fullName>
            </value>
            <value>
                <fullName>Project_Brochure</fullName>
            </value>
            <value>
                <fullName>Project_Exteriors</fullName>
            </value>
            <value>
                <fullName>Project_Interiors</fullName>
            </value>
            <value>
                <fullName>Project_Creatives</fullName>
            </value>
            <value>
                <fullName>Project_Creatives_Generic</fullName>
            </value>
            <value>
                <fullName>Project_Creatives_Offers</fullName>
            </value>
            <value>
                <fullName>Project_Email_Templates</fullName>
            </value>
            <value>
                <fullName>Project_Walkthrough_Link</fullName>
            </value>
            <value>
                <fullName>Project_Complete_Brochure</fullName>
            </value>
            <value>
                <fullName>TDS_Tutorial</fullName>
            </value>
            <value>
                <fullName>Possession_Intimation</fullName>
            </value>
            <value>
                <fullName>Emailers_Broker</fullName>
            </value>
            <value>
                <fullName>Instagram_Photos_Videos</fullName>
                <label>Instagram Photos/ Videos</label>
            </value>
            <value>
                <fullName>Creatives _Whatsapp</fullName>
                <label>Creatives  Whatsapp (tollfree / Without Toll free)</label>
            </value>
            <value>
                <fullName>Print_Media</fullName>
                <label>Print Media</label>
            </value>
            <value>
                <fullName>Company_Profile</fullName>
                <label>Company Profile</label>
            </value>
            <value>
                <fullName>Competition_Project</fullName>
                <label>Competition - Project (Builders)</label>
            </value>
            <value>
                <fullName>Possession_Intimation_Pictorial</fullName>
                <label>Possession Intimation with Pictorial</label>
            </value>
            <value>
                <fullName>Birthday_Anniversary</fullName>
                <label>Birthday  , Anniversary Emailers with Pictorials</label>
            </value>
            <value>
                <fullName>Event_Pictures_Videos</fullName>
                <label>Event Pictures and Videos</label>
            </value>
            <value>
                <fullName>Clients_Testimonials</fullName>
                <label>Clients Testimonials</label>
            </value>
            <value>
                <fullName>Milestone_Tagging</fullName>
                <label>Site Photos Progress/ Milestone Tagging</label>
            </value>
            <value>
                <fullName>Amenities_Photos</fullName>
                <label>Amenities Photos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>