force-app/main/default/objects/EYI_DMS__c/fields/EYI_Lockated_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lockated_Document_Id__c</fullName>
    <label>Lockated Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>