force-app/main/default/objects/EYI_DMS__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>DMS</relationshipLabel>
    <relationshipName>DMS</relationshipName>
    <type>Lookup</type>
</CustomField>