force-app/main/default/objects/EYI_DMS__c/fields/EYI_SFDC_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_SFDC_Object_Name__c</fullName>
    <label>SFDC Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EYI_Project__c</fullName>
            </value>
            <value>
                <fullName>EYI_Tower__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>