force-app/main/default/objects/EYI_DMS__c/fields/SFDC_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Record_Id__c</fullName>
    <label>SFDC Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>