force-app/main/default/objects/EYI_DMS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Document_Name__c</columns>
    <columns>EYI_Document_Link__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>