force-app/main/default/objects/EYI_DMS__c/listViews/Common_Documents.listView-meta.xml
<ListView>
    <fullName>Common_Documents</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Project__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>EYI_Tower__c</field>
        <operation>equals</operation>
    </filters>
    <label>Common Documents</label>
</ListView>